--- a/resume/translations/nl-BE.json
+++ b/resume/translations/nl-BE.json
@@ -32,5 +32,23 @@
   "contact.label.email": "E-mail *",
   "contact.label.subject": "Onderwerp",
   "contact.label.message": "Bericht *",
-  "contact.button.sendMessage": "Verzenden"
+  "contact.button.sendMessage": "Verzenden",
+  "agenda.calendarHeading": "Interviewbeschikbaarheid",
+  "calendar.day.sun": "Zo",
+  "calendar.day.mon": "Ma",
+  "calendar.day.tue": "Di",
+  "calendar.day.wed": "Wo",
+  "calendar.day.thu": "Do",
+  "calendar.day.fri": "Vr",
+  "calendar.day.sat": "Za",
+  "agenda.table.company": "Bedrijf",
+  "agenda.table.position": "Positie",
+  "agenda.table.dateApplied": "Sollicitatiedatum",
+  "agenda.table.status": "Status",
+  "contact.introTitle": "Laten we samenwerken",
+  "contact.introText": "Ik ben altijd geïnteresseerd in nieuwe kansen en uitdagingen. Of je nu hulp nodig hebt bij enterprise Java-toepassingen, AI/ML-oplossingen of full-stack ontwikkeling, ik hoor graag van je.",
+  "contact.detail.emailLabel": "E-mail",
+  "contact.detail.phoneLabel": "Telefoon",
+  "contact.detail.locationLabel": "Locatie",
+  "footer.text": "© 2025 Yilmaz Mustafa. Alle rechten voorbehouden."
 } 
