--- a/resume/translations/fr-BE.json
+++ b/resume/translations/fr-BE.json
@@ -2,17 +2,19 @@
   "nav.home": "Accueil",
   "nav.about": "À propos",
   "nav.experience": "Expérience",
-  "nav.skills": "Compétences & Technologies",
-  "nav.projects": "Projets en vedette",
+  "nav.skills": "Compétences",
+  "nav.projects": "Projets",
   "nav.agenda": "Agenda",
   "nav.contact": "Contact",
 
   "section.about": "À propos de moi",
   "section.experience": "Expérience",
-  "section.skills": "Compétences & Technologies",
-  "section.projects": "Projets en vedette",
+  "section.skills": "Compétences",
+  "section.projects": "Projets",
   "section.agenda": "Agenda",
-  "section.contact": "Me contacter",
+  "section.contact": "Contact",
+  "section.current": "Actuels",
+  "section.future": "Futurs",
 
   "agenda.applicationsProgress": "Avancement des candidatures",
 
