--- a/resume/translations/nl-BE.json
+++ b/resume/translations/nl-BE.json
@@ -2,17 +2,19 @@
   "nav.home": "Startpagina",
   "nav.about": "Over mij",
   "nav.experience": "Ervaring",
-  "nav.skills": "Vaardigheden & Technologieën",
-  "nav.projects": "Uitgelichte projecten",
+  "nav.skills": "Vaardigheden",
+  "nav.projects": "Projecten",
   "nav.agenda": "Agenda",
   "nav.contact": "Contact",
 
   "section.about": "Over mij",
   "section.experience": "Ervaring",
-  "section.skills": "Vaardigheden & Technologieën",
-  "section.projects": "Uitgelichte projecten",
+  "section.skills": "Vaardigheden",
+  "section.projects": "Projecten",
   "section.agenda": "Agenda",
-  "section.contact": "Neem contact op",
+  "section.contact": "Contact",
+  "section.current": "Huidig",
+  "section.future": "Toekomst",
 
   "agenda.applicationsProgress": "Sollicitatievoortgang",
 
