--- a/resume/translations/en.json
+++ b/resume/translations/en.json
@@ -2,17 +2,19 @@
   "nav.home": "Home",
   "nav.about": "About",
   "nav.experience": "Experience",
-  "nav.skills": "Skills & Technologies",
-  "nav.projects": "Featured Projects",
+  "nav.skills": "Skills",
+  "nav.projects": "Projects",
   "nav.agenda": "Agenda",
-  "nav.contact": "Get In Touch",
+  "nav.contact": "Contact",
 
   "section.about": "About Me",
   "section.experience": "Experience",
-  "section.skills": "Skills & Technologies",
-  "section.projects": "Featured Projects",
+  "section.skills": "Skills",
+  "section.projects": "Projects",
   "section.agenda": "Agenda",
-  "section.contact": "Get In Touch",
+  "section.contact": "Contact",
+  "section.current": "Current",
+  "section.future": "Future",
 
   "agenda.applicationsProgress": "Applications Progress",
 
