Add accessibility features and new TTS functionality; enhance navigation and chat components with ARIA attributes, improve keyboard interactions for calendar dates, and update localization for 'Listen' feature in multiple languages.

--- a/resume/translations/de.json
+++ b/resume/translations/de.json
@@ -25,6 +25,7 @@
   "calendar.selectTimePlaceholder": "--Wählen Sie eine Uhrzeit--",
 
   "chat.launcherLabel": "Chat öffnen",
+  "listen.launcherLabel": "Hören",
   "chat.header": "Fragen Sie mich",
   "chat.inputPlaceholder": "Stellen Sie Fragen zu meiner Erfahrung, meinen Fähigkeiten, Bewerbungen oder Verfügbarkeiten",
   "chat.askButton": "Fragen",
