--- a/resume/translations/nl-BE.json
+++ b/resume/translations/nl-BE.json
@@ -25,6 +25,7 @@
   "calendar.selectTimePlaceholder": "--Selecteer een tijd--",
 
   "chat.launcherLabel": "Open chat",
+  "listen.launcherLabel": "Luister",
   "chat.header": "Stel mij een vraag",
   "chat.inputPlaceholder": "Stel een vraag over mijn ervaring, vaardigheden, aanvragen of beschikbaarheid",
   "chat.askButton": "Vraag",
