Update translation files to include new skills and technologies in multiple languages; enhance footer text consistency across all language files.

--- a/resume/translations/de.json
+++ b/resume/translations/de.json
@@ -54,5 +54,23 @@
   "contact.detail.emailLabel": "E-Mail",
   "contact.detail.phoneLabel": "Telefon",
   "contact.detail.locationLabel": "Standort",
-  "footer.text": "© 2025 Yilmaz Mustafa. Alle Rechte vorbehalten."
+  "footer.text": "© 2025 Yilmaz Mustafa. Alle Rechte vorbehalten.",
+  "skills.category.ai-ml": "KI/ML-Entwicklung",
+  "skills.category.enterprise-java": "Enterprise-Java",
+  "skills.category.full-stack-development": "Full-Stack-Entwicklung",
+  "skills.ai-ml.computer-vision-opencv-mediapipe-tensorflow": "Computervision (OpenCV, MediaPipe, TensorFlow)",
+  "skills.ai-ml.voice-processing-whisper-vosk-deepspeech": "Sprachverarbeitung (Whisper, Vosk, DeepSpeech)",
+  "skills.ai-ml.mobile-apps-with-ai-integration": "Mobile Apps mit KI-Integration",
+  "skills.ai-ml.mlops-with-terraform": "MLOps mit Terraform",
+  "skills.ai-ml.ai-security-integration-mcp-protocol": "KI-Sicherheitsintegration (MCP-Protokoll)",
+  "skills.enterprise-java.jdk-8-11-17-jakarta-ee": "JDK 8, 11, 17, Jakarta EE",
+  "skills.enterprise-java.spring-ecosystem-boot-security-data-cloud-ai": "Spring-Ökosystem (Boot, Security, Data, Cloud, KI)",
+  "skills.enterprise-java.financial-systems-swift-protocols-amh": "Finanzsysteme (SWIFT-Protokolle, AMH)",
+  "skills.enterprise-java.microservices-modulith-architecture": "Microservices/Modulith-Architektur",
+  "skills.enterprise-java.jenkins-nexus-maven-gradle-ant": "Jenkins, Nexus, Maven, Gradle, Ant",
+  "skills.full-stack-development.spring-boot-backend-with-react-frontend": "Spring Boot Backend mit React Frontend",
+  "skills.full-stack-development.nestjs-backend-with-react-native-cross-platform": "NestJS Backend mit React Native (plattformübergreifend)",
+  "skills.full-stack-development.fastapi-and-pgvector-with-streamlit-ai-focused-ui": "FastAPI und PGVector mit Streamlit UI für KI-Anwendungen",
+  "skills.full-stack-development.pwa-using-vaadin-spring-boot-docker": "PWA mit Vaadin, Spring Boot und Docker",
+  "skills.full-stack-development.automated-deployment-for-woocommerce-wp": "Automatisierte Bereitstellung für WooCommerce und WordPress"
 } 
