--- a/resume/translations/nl-BE.json
+++ b/resume/translations/nl-BE.json
@@ -53,5 +53,23 @@
   "contact.detail.emailLabel": "E-mail",
   "contact.detail.phoneLabel": "Telefoon",
   "contact.detail.locationLabel": "Locatie",
-  "footer.text": "© 2025 Yilmaz Mustafa. Alle rechten voorbehouden."
+  "footer.text": "© 2025 Yilmaz Mustafa. Alle rechten voorbehouden.",
+  "skills.category.ai-ml": "AI/ML-ontwikkeling",
+  "skills.category.enterprise-java": "Enterprise-Java",
+  "skills.category.full-stack-development": "Full-Stack-ontwikkeling",
+  "skills.ai-ml.computer-vision-opencv-mediapipe-tensorflow": "Computervisie (OpenCV, MediaPipe, TensorFlow)",
+  "skills.ai-ml.voice-processing-whisper-vosk-deepspeech": "Spraakverwerking (Whisper, Vosk, DeepSpeech)",
+  "skills.ai-ml.mobile-apps-with-ai-integration": "Mobiele apps met AI-integratie",
+  "skills.ai-ml.mlops-with-terraform": "MLOps met Terraform",
+  "skills.ai-ml.ai-security-integration-mcp-protocol": "AI-beveiligingsintegratie (MCP-protocol)",
+  "skills.enterprise-java.jdk-8-11-17-jakarta-ee": "JDK 8, 11, 17, Jakarta EE",
+  "skills.enterprise-java.spring-ecosystem-boot-security-data-cloud-ai": "Spring-ecosysteem (Boot, Security, Data, Cloud, AI)",
+  "skills.enterprise-java.financial-systems-swift-protocols-amh": "Financiële systemen (SWIFT-protocollen, AMH)",
+  "skills.enterprise-java.microservices-modulith-architecture": "Microservices/Modulith-architectuur",
+  "skills.enterprise-java.jenkins-nexus-maven-gradle-ant": "Jenkins, Nexus, Maven, Gradle, Ant",
+  "skills.full-stack-development.spring-boot-backend-with-react-frontend": "Spring Boot-backend met React-frontend",
+  "skills.full-stack-development.nestjs-backend-with-react-native-cross-platform": "NestJS-backend met React Native voor meerdere platforms",
+  "skills.full-stack-development.fastapi-and-pgvector-with-streamlit-ai-focused-ui": "FastAPI en PGVector met Streamlit UI gericht op AI",
+  "skills.full-stack-development.pwa-using-vaadin-spring-boot-docker": "PWA met Vaadin, Spring Boot en Docker",
+  "skills.full-stack-development.automated-deployment-for-woocommerce-wp": "Geautomatiseerde implementatie voor WooCommerce en WordPress"
 } 
