--- a/resume/translations/en.json
+++ b/resume/translations/en.json
@@ -9,7 +9,7 @@
 
   "section.about": "About Me",
   "section.experience": "Experience",
-  "section.skills": "Skills",
+  "section.skills": "Skills & Technologies",
   "section.projects": "Projects",
   "section.agenda": "Agenda",
   "section.contact": "Contact",
@@ -58,5 +58,24 @@
   "contact.detail.phoneLabel": "Phone",
   "contact.detail.locationLabel": "Location",
 
-  "footer.text": "© 2025 Yilmaz Mustafa. All rights reserved."
+  "footer.text": "© 2025 Yilmaz Mustafa. All rights reserved.",
+
+  "skills.category.ai-ml": "AI/ML Development",
+  "skills.category.enterprise-java": "Enterprise Java",
+  "skills.category.full-stack-development": "Full-Stack Development",
+  "skills.ai-ml.computer-vision-opencv-mediapipe-tensorflow": "Computer Vision (OpenCV, MediaPipe, TensorFlow)",
+  "skills.ai-ml.voice-processing-whisper-vosk-deepspeech": "Voice Processing (Whisper, Vosk, DeepSpeech)",
+  "skills.ai-ml.mobile-apps-with-ai-integration": "Mobile Apps with AI Integration",
+  "skills.ai-ml.mlops-with-terraform": "MLOps with Terraform",
+  "skills.ai-ml.ai-security-integration-mcp-protocol": "AI-Security Integration (MCP Protocol)",
+  "skills.enterprise-java.jdk-8-11-17-jakarta-ee": "JDK 8, 11, 17, Jakarta EE",
+  "skills.enterprise-java.spring-ecosystem-boot-security-data-cloud-ai": "Spring Ecosystem (Boot, Security, Data, Cloud, AI)",
+  "skills.enterprise-java.financial-systems-swift-protocols-amh": "Financial Systems (SWIFT protocols, AMH)",
+  "skills.enterprise-java.microservices-modulith-architecture": "Microservices/Modulith Architecture",
+  "skills.enterprise-java.jenkins-nexus-maven-gradle-ant": "Jenkins, Nexus, Maven, Gradle, Ant",
+  "skills.full-stack-development.spring-boot-backend-with-react-frontend": "Spring Boot backend with React frontend",
+  "skills.full-stack-development.nestjs-backend-with-react-native-cross-platform": "NestJS backend with React Native cross-platform",
+  "skills.full-stack-development.fastapi-and-pgvector-with-streamlit-ai-focused-ui": "FastAPI and PGVector with Streamlit AI-focused UI",
+  "skills.full-stack-development.pwa-using-vaadin-spring-boot-docker": "PWA using Vaadin + Spring Boot + Docker",
+  "skills.full-stack-development.automated-deployment-for-woocommerce-wp": "Automated Deployment for WooCommerce + WP"
 } 
