Refactor ApplicationsLoader to TasksAndAssignmentsLoader, integrating Linear API for dynamic task fetching; update UI to reflect new task structure and enhance meeting scheduling functionality.

--- a/resume/translations/en.json
+++ b/resume/translations/en.json
@@ -16,7 +16,7 @@
   "section.current": "Current",
   "section.future": "Future",
 
-  "agenda.applicationsProgress": "Applications Progress",
+  "agenda.applicationsProgress": "Tasks and Assignments",
 
   "hero.getInTouch": "Get In Touch",
   "hero.viewProjects": "View Projects",
